...
                android:text="@string/info_name"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/info_name_textView"
                tools:text="@string/backbase"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
...
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@android:color/white">

        <Button
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_close"
            android:padding="10dp"
            android:gravity="center"
            android:drawablePadding="10dp"
...
