<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/white">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_back"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/holo_blue_dark" />

    </LinearLayout>

    <fragment
        android:id="@+id/map_fragment"
        android:tag="@string/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/header_bar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/white">

        <Button
            android:id="@+id/about_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_about_info"
            android:gravity="center"
            android:textSize="@dimen/about_info_button_text_size"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>